test/classes/initializers/errors/generic-lhsConsRhsInit2.good
generic-lhsConsRhsInit2.chpl:14: note: Constructors have been deprecated as of Chapel 1.18. Please use initializers instead.
generic-lhsConsRhsInit2.chpl:14: warning: Type 'hasConstruct' defines a constructor here
generic-lhsConsRhsInit2.chpl:20: error: type mismatch in assignment from hasInit(int(64)) to hasConstruct
